--- a/mod2/index.html
+++ b/mod2/index.html
@@ -10,10 +10,17 @@
 	<h1>Our menu</h1>
 	<div class="row">
 		<div class="col12">
-		1	
+			<section id="ch">Chicken</section>
+			<p>bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla</p>
 		</div>
-		<div class="col12">2</div>
-		<div class="col3">3</div>
+		<div class="col12">
+			<section id="be">Beef</section> 
+			<p>bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla</p>
+		</div>
+		<div class="col3">
+			<section id="su">Sushi</section> 
+			<p>bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla</p>
+		</div>
 	</div>
 </body>
 </html>
